--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "baseUrl": ".",
     "paths": {
       "@app/*": ["./app/*"],
+      "@core/*": ["./core/*"],
       "@client/*": ["./frontend/*"],
       "@server/*": ["./backend/*"]
     }
