chore(global): 🔧 adicionar escopos de camadas para commits convencionais

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,12 @@
 {
-  "conventionalCommits.scopes": ["global", "client", "server"],
+  "conventionalCommits.scopes": [
+    "global",
+    "client",
+    "server",
+    "server/domain",
+    "server/app",
+    "server/infra"
+  ],
 
   // ==================================================================================
   // Material Icon Theme settings
