chore(global): 🔧 atribuir ícone `constant` ao diretório `value-objects`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     /* 1)       */ "domain": "core",
     /* 1.1)     */ "entities": "class",
     /* 1.2)     */ "exceptions": "error",
+    /* 1.2)     */ "value-objects": "constant",
 
     /* 2)       */ "application": "app",
     /* 2.1)     */ "usecases": "job",
