chore(global): 🔧 adicionar escopos do `client` aos commits convencionais

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,11 @@
   "conventionalCommits.scopes": [
     "global",
     "client",
+    "client/page",
+    "client/components",
+    "client/hooks",
+    "client/utils",
+    "client/assets",
     "server",
     "server/domain",
     "server/app",
