feat(server/infra): ✨ adicionar variáveis de ambiente do banco de dados e gerar `DATABASE_URL` automaticamente

--- a/.example.env
+++ b/.example.env
@@ -8,6 +8,15 @@
 # Ao adicionar variáveis de ambiente adicionais, o schema em "backend/infrastructure/configs/env.js"
 # deve ser atualizado de acordo.
 
-# Drizzle
-DATABASE_URL="postgresql://postgres:password@localhost:5432/pelo-bem"
+# ====================================================================================================
+#  Banco de Dados (Drizzle ORM)
+# ====================================================================================================
 DATABASE_SCHEMA="public"
+DATABASE_PROTOCOL="postgresql"
+DATABASE_USER="postgres"
+DATABASE_PASSWORD="password"
+DATABASE_HOST="localhost"
+DATABASE_PORT="5432"
+DATABASE_NAME="pelo-bem"
+# Baseado nas variáveis acima, a variável `DATABASE_URL` será construido automaticamente.
+# Ex.: DATABASE_URL="postgresql://postgres:password@localhost:5432/pelo-bem"
