feat(server/infra): ✨ adicionar variáveis de ambiente para armazenamento de arquivos

--- a/.example.env
+++ b/.example.env
@@ -20,3 +20,14 @@ DATABASE_PORT="5432"
 DATABASE_NAME="pelo-bem"
 # Baseado nas variáveis acima, a variável `DATABASE_URL` será construido automaticamente.
 # Ex.: DATABASE_URL="postgresql://postgres:password@localhost:5432/pelo-bem"
+
+# ====================================================================================================
+#  Armazenamento de Arquivos (S3 / MinIO "File Storage")
+# ====================================================================================================
+S3_BUCKET_NAME="pelo-bem"
+S3_REGION="us-east-1" # Utilizado somente para AWS S3, deixe qualquer valor se estiver usando MinIO.
+S3_ACCESS_KEY_ID=""
+S3_SECRET_ACCESS_KEY=""
+S3_ENDPOINT="http://localhost:9000"
+S3_PUBLIC_URL=""
+S3_FORCE_PATH_STYLE="true"
