fix(client/styles): 💄 corrigir a cor do tema para melhor consistência visual

--- a/app/manifest.json
+++ b/app/manifest.json
@@ -15,7 +15,7 @@
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#C97D60",
+  "theme_color": "#F7EAE4",
   "background_color": "#F7EAE4",
   "display": "standalone"
 }
