chore(global): 🔧 adicionar escopo `client/styles` aos commits convencionais

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,6 +7,7 @@
     "client/hooks",
     "client/utils",
     "client/assets",
+    "client/styles",
     "server",
     "server/domain",
     "server/app",
