chore(global): 💬 corrigir escopo `client/page` para plural

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,7 @@
   "conventionalCommits.scopes": [
     "global",
     "client",
-    "client/page",
+    "client/pages",
     "client/components",
     "client/hooks",
     "client/utils",
