--- a/.example.env
+++ b/.example.env
@@ -22,12 +22,16 @@ DATABASE_NAME="pelo-bem"
 # Ex.: DATABASE_URL="postgresql://postgres:password@localhost:5432/pelo-bem"
 
 # ====================================================================================================
-#  Armazenamento de Arquivos (S3 / MinIO "File Storage")
+#  Armazenamento de Arquivos (S3 / MinIO "File Storage") + NextConfig (Images)
 # ====================================================================================================
-S3_BUCKET_NAME="pelo-bem"
+S3_BUCKET_NAME="assets"
 S3_REGION="us-east-1" # Utilizado somente para AWS S3, deixe qualquer valor se estiver usando MinIO.
-S3_ACCESS_KEY_ID=""
-S3_SECRET_ACCESS_KEY=""
-S3_ENDPOINT="http://localhost:9000"
-S3_PUBLIC_URL=""
+S3_ACCESS_KEY_ID="minioadmin"
+S3_SECRET_ACCESS_KEY="senhasupersecreta"
 S3_FORCE_PATH_STYLE="true"
+S3_PROTOCOL="http"
+S3_HOST="localhost"
+S3_PORT="9000" # Apagar se estiver usando AWS S3.
+# Baseado nas variáveis acima, a variável `S3_ENDPOINT` e `S3_PUBLIC_URL` serão construídas automaticamente.
+# S3_ENDPOINT="http://localhost:9000"
+# S3_PUBLIC_URL="http://localhost:9000/assets"
