--- a/package.json
+++ b/package.json
@@ -42,10 +42,12 @@
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.513.0",
     "next": "^15.2.3",
+    "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
