--- a/.example.env
+++ b/.example.env
@@ -25,6 +25,8 @@ DATABASE_NAME="pelo-bem"
 #  Armazenamento de Arquivos (S3 / MinIO "File Storage") + NextConfig (Images)
 # ====================================================================================================
 S3_BUCKET_NAME="assets"
+S3_MAX_FILE_SIZE_MB="5"
+NEXT_PUBLIC_S3_MAX_FILE_SIZE_MB="5" # Mantenha o mesmo valor que `S3_MAX_FILE_SIZE_MB` acima.
 S3_REGION="us-east-1" # Utilizado somente para AWS S3, deixe qualquer valor se estiver usando MinIO.
 S3_ACCESS_KEY_ID="minioadmin"
 S3_SECRET_ACCESS_KEY="senhasupersecreta"
