chore(global): 🔧 adicionar variáveis da aplicação em si

--- a/.example.env
+++ b/.example.env
@@ -9,6 +9,15 @@
 # deve ser atualizado de acordo.
 
 # ====================================================================================================
+#  Aplicação (Next.js)
+# ====================================================================================================
+APP_PROTOCOL="http"
+APP_HOST="localhost"
+APP_PORT="3000" # Apagar se estiver usando o Next.js em modo de produção (ex.: `next start`).
+# Baseado nas variáveis acima, a variável `APP_URL` será construido automaticamente.
+# Ex.: APP_URL="http://localhost:3000"
+
+# ====================================================================================================
 #  Banco de Dados (Drizzle ORM)
 # ====================================================================================================
 DATABASE_SCHEMA="public"
