chore(global): 🔧 adicionar escopos do `client/services` aos commits convencionais

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "client/utils",
     "client/assets",
     "client/styles",
+    "client/services",
     "server",
     "server/domain",
     "server/app",
