--- a/package.json
+++ b/package.json
@@ -40,12 +40,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
     "lucide-react": "^0.513.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.4",
     "react": "^19.0.0",
+    "react-day-picker": "^9.7.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.58.0",
     "sonner": "^2.0.5",
