chore(global): 🔧 corrigir variáveis de ambiente de exemplo

--- a/.example.env
+++ b/.example.env
@@ -20,11 +20,11 @@ APP_PORT="3000" # Apagar se estiver usando o Next.js em modo de produção (ex.:
 # ====================================================================================================
 #  Banco de Dados (Drizzle ORM)
 # ====================================================================================================
-DATABASE_SCHEMA="public"
+#DATABASE_SCHEMA="pelo-bem"
 DATABASE_PROTOCOL="postgresql"
 DATABASE_USER="postgres"
-DATABASE_PASSWORD="password"
-DATABASE_HOST="localhost"
+DATABASE_PASSWORD="Qdljfg74VCVNQ0f8ISicMQ6rGg3T8Mb" # Senha gerada para o projeto
+DATABASE_HOST="0.0.0.0" # Usei WSL e tive problema com "localhost"
 DATABASE_PORT="5432"
 DATABASE_NAME="pelo-bem"
 # Baseado nas variáveis acima, a variável `DATABASE_URL` será construido automaticamente.
