--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.41.0",
+    "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.513.0",
     "next": "^15.2.3",
     "next-themes": "^0.4.6",
