chore(global): 🔧 adicionar variável para senha do cookie

--- a/.example.env
+++ b/.example.env
@@ -17,6 +17,9 @@ APP_PORT="3000" # Apagar se estiver usando o Next.js em modo de produção (ex.:
 # Baseado nas variáveis acima, a variável `APP_URL` será construido automaticamente.
 # Ex.: APP_URL="http://localhost:3000"
 
+# Senha para cookies criptografados, deve ter pelo menos 32 caracteres.
+SECRET_COOKIE_PASSWORD="seu_segredo_super_forte_e_dificil_de_adivinhar_com_pelo_menos_32_caracteres"
+
 # ====================================================================================================
 #  Banco de Dados (Drizzle ORM)
 # ====================================================================================================
